# randometen

./: .gitignore  README.md  docker-compose.yml.example  pyproject.toml
.github/workflows/: docker.yaml  linting.yaml  testing.yaml
backend/: .dockerignore  Dockerfile  manage.py  pyproject.toml
backend/drankspel/: wsgi.py
backend/drankspel/api/v1/: urls.py
backend/drankspel/settings/: settings.py
backend/drankspel/static/drankspel/css/: swagger-ui-drankspel-styling.css
backend/nginx/conf.d/: drankspel.conf
backend/resources/: entrypoint.sh
backend/website/drankspel/: admin.py  services.py  urls.py
backend/website/drankspel/api/: serializers.py  urls.py  views.py
backend/website/drankspel/dialogflow/: intents.py  models.py  services.py
backend/website/drankspel/management/commands/: reset_dialogflow_agent.py
backend/website/drankspel/settings/: development.py  production.py  settings.py
backend/website/drankspel/static/drankspel/css/: swagger-ui-drankspel-styling.css
backend/website/drankspel/templates/drankspel/: swagger.html
backend/website/games/: admin.py  apps.py  models.py
backend/website/games/api/v1/: serializers.py  urls.py  views.py
backend/website/games/dialogflow/: handlers.py  intents.py
backend/website/games/migrations/: 0001_initial.py
drankspel/: package.json
frontend/: Dockerfile  README.md  docker.blueprint.env  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.vue
frontend/src/common/: api.service.ts  games.api.service.ts
nginx/conf.d/: drankspel.conf
(+7 files in other folders)
